crates/service/tests/completion/snapshots/features__completion__table__ref_in_table_type.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "ref",
    "kind": 14
  }
]
