crates/service/tests/completion/snapshots/features__completion__table__return_call_indirect_following_int_idx.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 25
        },
        "end": {
          "line": 4,
          "character": 26
        }
      },
      "newText": "0"
    }
  }
]
