crates/service/tests/completion/snapshots/features__completion__table__return_call_indirect_incomplete_ident.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "$table",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 25
        },
        "end": {
          "line": 4,
          "character": 27
        }
      },
      "newText": "$table"
    }
  }
]
