crates/service/tests/completion/snapshots/features__completion__table__table_size_incomplete_ident.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "$table",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 16
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "newText": "$table"
    }
  },
  {
    "label": "1",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 16
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "newText": "1"
    }
  }
]
